# xRAG

./: .gitignore  Dockerfile  main.py  pyproject.toml  pyproject.toml.local
.devcontainer/: devcontainer.json
src/distill/: test.ipynb
src/eval/: run_eval.py
