[project]
name = "xrag"
version = "0.1.0"
description = "xRAG"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "accelerate==0.27.2",
    "datasets==2.17.1",
    "deepspeed==0.13.2",
    "flash-attn==2.3.4",
    "sentencepiece>=0.2.1",
    "setuptools>=80.9.0",
    "torch==2.1.1+cu121",
    "transformers==4.38.0",
    "wandb>=0.22.1",
]

[tool.uv.sources]
torch = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
