[project]
name = "xrag"
version = "0.1.0"
description = "xRAG"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch==2.1.1+cu121",
]

[tool.uv.sources]
torch = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
